--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version" : "0.1.0",
 	"dependencies": {
 		"nodejs-websocket": "1.7.1",
-		"electron-log" : "1.3.0"
+		"electron-log" : "1.3.0",
+		"express" : "4.15.0",
+		"socket.io" : "1.7.3"
 	}
 }
